# sbgck-opencv

./: .gitignore  CMakeLists.txt  TODO.md  build-opencv-android.sh  build-opencv.cmd  build-opencv.sh  build.cmd  build.sh  buildr.cmd  buildr.sh  links.txt  mainloop.csv  mainloop.txt  run.cmd  tests.cmd  tests.sh
dev/: .gitignore  CMakeLists.txt  build.cmd  build.sh  hello_world_opencv.cpp  main_assetmanager.cpp  main_camera.cpp  main_color_correction.cpp  main_detectboardonmap.cpp  main_detecttokens.cpp  main_diff_images.cpp  main_json_maps.cpp  main_json_test.cpp  main_tocken_detect_loop.cpp  main_tocken_detect_loop.json  main_token_detect_loop.cpp  main_token_detect_loop.json
hello_world_opencv/: CMakeLists.txt  hello_world_opencv.cpp
include/: board.hpp  camera.hpp  colormanager.hpp  component.hpp  componentmanager.hpp  detector.hpp  log.hpp  mathelper.hpp  regionpoly.hpp  runtimeprop.hpp  token.hpp  version.hpp
include/internal/: asset.hpp  component.hpp  region.hpp  regioncircle.hpp  regionpoly.hpp  regionrect.hpp  roimanager.hpp
opencv/: areamanager.cpp  areamanager.hpp  assetmanager.cpp  assetmanager.hpp  camera.hpp  imagedetection.cpp  log.hpp  version.cpp
src/: areamanager.cpp  asset.hpp  assetdetection.cpp  assetdetection.hpp  board.hpp  camera.cpp  camera.hpp  colorcalibration.cpp  colorcalibration.hpp  component.hpp  detector.cpp  dice.hpp  histogram.cpp  histogram.hpp  imagedetection.cpp  imagedetection.cpp1.txt  imagedetection.hpp  imagediff.cpp  imagediff.hpp  imageshape.cpp  imageshape.hpp  opencv-camera.txt  region.hpp  regioncircle.hpp  roimanager.cpp  roimanager.hpp  runtimeprop.cpp  sbgck-opencv.cd  strategy.cpp  strategy.hpp  token.hpp  tokencolor.cpp  tokencolor.hpp  tokenshape.cpp  tokenshape.hpp
src/components/: board.hpp  component.hpp  dice.hpp  token.hpp
src/matching/: strategy.hpp
src/roi/: region.hpp  regioncircle.hpp  regionpoly.hpp  regionrect.hpp
src_old/: CMakeLists.txt  assetmanager.hpp  campera2.cpp.txt  colorcalibration.cpp  colorcalibration.hpp  imagedetection.cpp.2.txt
tests/: .gitignore  CMakeLists.txt  base.hpp  base.hpp.in  test_asset.cpp  test_board.cpp  test_board_roi.cpp  test_camera.cpp  test_color_calibration.cpp  test_color_correction.cpp  test_color_correction.cpp.txt  test_diff.cpp  test_histogram.cpp  test_remote_asset.cpp  test_roi.cpp  test_runtimeprop.cpp  test_token.cpp  test_token_asset.cpp  test_token_color.cpp  test_token_color_realboard_inrangee.cpp.txt  test_token_remote.cpp  test_token_shape.cpp  test_version.cpp
tests/images/: Makefile  board.json  board.map  roi.map
